--- a/tourist-web/src/main/webapp/view/platform/trouristGood/touristGood.html
+++ b/tourist-web/src/main/webapp/view/platform/trouristGood/touristGood.html
@@ -224,7 +224,7 @@
                 </div>
 
                 <div style="text-align: center;">
-                    <button type="button" class="btn-lit" name="btnSave" data-text="审核通过" id="jq-cms-sh"></button>
+                    <button type="button" class="btn-lit modifyCheckState" name="btnSave" id="jq-cms-sh">审核通过</button>
                 </div>
             </div>
         </form>
@@ -241,5 +241,7 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
 <script src="http://resali.huobanplus.com/cdn/ckeditor/4.6.1/full/ckeditor.js"></script>
 <script src="http://resali.huobanplus.com/cdn/ckeditor/4.6.1/full/adapters/jquery.js"></script>
+<script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
+<script src="../../../assets/js/page/platform/touristGood.js" th:inline="javascript"></script>
 </body>
 </html>
