所有页面流程调通

--- a/tourist-web/src/main/webapp/view/common/orderDetails.html
+++ b/tourist-web/src/main/webapp/view/common/orderDetails.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/plugins/iCheck/custom.css" rel="stylesheet"/>
-    <link href="../../assets/css/style.min.css?v=4.0.0" rel="stylesheet"/>
+    <!--<link href="../../assets/css/style.min.css?v=4.0.0" rel="stylesheet"/>-->
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 </head>
 <!--/*@thymesVar id="order" type="com.huotu.tourist.entity.TouristOrder"*/-->
 <!--/*@thymesVar id="route" type="com.huotu.tourist.entity.TouristRoute"*/-->
