--- a/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSetting.html
+++ b/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSetting.html
@@ -9,6 +9,7 @@
     <link href="../../../assets/css/admin.global.css" type="text/css" rel="stylesheet"/>
     <link href="../../../assets/css/global.css" type="text/css" rel="stylesheet"/>
     <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -18,7 +19,7 @@
         <span class="icon-sprite icon-list"></span>
         <h3>采购商资格产品设置</h3>
         <div class="bar">
-            <a class="btn-lit" href="purchaserProductSettingList.html" target="content">
+            <a class="btn-lit" href="purchaserProductSettingList.html">
                 <span>返回管理列表</span></a>
         </div>
     </div>
