--- a/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSettingList.html
+++ b/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSettingList.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
     <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -30,8 +31,9 @@
     </div>
     <div class="panel panel-default">
         <div id="toolbar" class="btn-group">
-            <button id="btn_export" type="button" class="btn btn-default">
-                <a href="purchaserProductSetting.html" th:href="@{/distributionPlatform/toPurchaserProductSetting}">
+            <button id="btn_export" type="button" class="btn btn-primary">
+                <a style="color: #FFFFFF" href="purchaserProductSetting.html"
+                   th:href="@{/distributionPlatform/toPurchaserProductSetting}">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span>
                 </a>
             </button>
