--- a/tourist-web/src/main/webapp/view/platform/supplier/supplier.html
+++ b/tourist-web/src/main/webapp/view/platform/supplier/supplier.html
@@ -10,6 +10,7 @@
     <link href="../../../assets/css/global.css" type="text/css" rel="stylesheet"/>
     <link href="../../../assets/libs/cityPicker/css/city-picker.css" rel="stylesheet"/>
     <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
     <style>
         .city-picker-span {
@@ -23,7 +24,7 @@
     <div class="h">
         <span class="icon-sprite icon-list"></span>
         <div class="bar">
-            <a class="btn-lit" href="supplierList.html" target="content">
+            <a class="btn-lit" href="supplierList.html">
                 <span>返回管理列表</span></a>
         </div>
     </div>
