--- a/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
     <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="panel-body" style="padding-bottom:0;">
