--- a/tourist-web/src/main/webapp/view/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/common/orderList.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css"/>
     <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
     <style>
         .panel-success {
             border-color: #1dc5a3;
@@ -95,14 +96,17 @@
                                         <input size="50" class="form-control" type="text"
                                                id="touristDate" name="touristDate" placeholder="出行时间"/>
                                     </div>
+                                    <div class="form-group">
+                                        <button id="searchList" type="button" class="btn btn-primary">筛选</button>
+                                    </div>
 
                                 </div>
                                 <p style="height: 8px;"></p>
 
-                                <div class="form-inline" style="max-width: 926px; text-align: right;">
-                                    <button id="searchList" type="button" class="btn btn-primary">筛选</button>
-                                    <!--<button type="button" class="btn btn-primary">导出订单</button>-->
-                                </div>
+                                <!--<div class="form-inline" style="max-width: 926px; text-align: right;">-->
+                                <!--<button id="searchList" type="button" class="btn btn-primary">筛选</button>-->
+                                <!--&lt;!&ndash;<button type="button" class="btn btn-primary">导出订单</button>&ndash;&gt;-->
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
