--- a/tourist-web/src/main/webapp/view/platform/touristBuyer/touristBuyerList.html
+++ b/tourist-web/src/main/webapp/view/platform/touristBuyer/touristBuyerList.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
 
     <link href="../../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
 </head>
 <body>
