--- a/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
+++ b/tourist-web/src/main/webapp/view/platform/trouristGood/touristGoodList.html
@@ -26,15 +26,45 @@
                     </div>
                     <div class="col-sm-2">
                         <select name="touristTypeId" class="form-control"
-                                placeholder="线路类型"></select>
+                                placeholder="线路类型">
+                            <!--suppress ThymeleafVariablesResolveInspection -->
+                            <option th:each="touristType : ${touristTypes}"
+                                    th:text="${touristType.typeName}"
+                                    th:value="${touristType.id}" value="1">
+                                自驾游
+                            </option>
+                            <option value="2">
+                                跟团
+                            </option>
+                        </select>
                     </div>
                     <div class="col-sm-2">
                         <select name="activityTypeId" class="form-control"
-                                placeholder="活动类型"></select>
+                                placeholder="活动类型">
+                            <!--suppress ThymeleafVariablesResolveInspection -->
+                            <option th:each="activity : ${activityTypes}"
+                                    th:text="${activity.activityName}"
+                                    th:value="${activity.id}" value="1">
+                                滑雪
+                            </option>
+                            <option value="2">
+                                登山
+                            </option>
+                        </select>
                     </div>
                     <div class="col-sm-2">
                         <select name="touristCheckState" class="form-control"
-                                placeholder="审核状态"></select>
+                                placeholder="审核状态">
+                            <!--suppress ThymeleafVariablesResolveInspection -->
+                            <option value="0"
+                                    th:each="checkState:${T(com.huotu.tourist.common.TouristCheckStateEnum).values()}"
+                                    th:value="${checkState.getCode()}"
+                                    th:text="${checkState.getValue().toString()}">已保存
+                            </option>
+                            <option value="1">未审核</option>
+                            <option value="2">已审核</option>
+                            <option value="3">已回收</option>
+                        </select>
                     </div>
 
                     <div class="col-sm-2">
