服务端链接地址添加

--- a/tourist-web/src/main/webapp/view/platform/purchaserPaymentRecord/purchaserPaymentRecordList.html
+++ b/tourist-web/src/main/webapp/view/platform/purchaserPaymentRecord/purchaserPaymentRecordList.html
@@ -49,6 +49,7 @@
             </select>
         </div>
         <table id="table" data-url="../../../mock/platform/purchaserPaymentRecordList.json"
+               th:attr="data-url=@{/distributionPlatform/purchaserPaymentRecordList}"
                data-method="get"
                data-side-pagination="server"
                data-striped="true"
