资源上传添加

--- a/tourist-web/src/main/webapp/view/platform/main.html
+++ b/tourist-web/src/main/webapp/view/platform/main.html
@@ -224,6 +224,9 @@
 </script>
 <script th:inline="javascript">
     uploaderUrl = /*[[@{/upload/fine}]]*/ null;
+    imageUploaderUrl = /*[[@{/upload/image}]]*/ null;
+    testMode = /*[[${@environment.acceptsProfiles('test')}]]*/ true;
+    language = 'zh-cn';
 </script>
 
 
