--- a/tourist-web/src/main/webapp/view/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/supplier/goodsDetailsH+.html
@@ -23,8 +23,10 @@
     <link href="http://resali.huobanplus.com/cdn/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="http://resali.huobanplus.com/cdn/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/animate.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css"/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/plugins/summernote/summernote.css" rel="stylesheet"/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/plugins/summernote/summernote-bs3.css" rel="stylesheet"/>
+    <link href="../../assets/libs/cityPicker/css/city-picker.css" rel="stylesheet"/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
 </head>
@@ -35,11 +37,12 @@
         <div class="col-sm-12">
             <div class="ibox">
                 <div class="ibox-title">
-                    <h5>编辑资讯</h5>
+                    <h2>编辑资讯</h2>
+                    <div class="text-right">
+                        <button onclick="history.go(-1)" class="btn btn-success" type="button">返回</button>
+                    </div>
                 </div>
-                <div class="ibox-title">
-                    <button onclick="history.go(-1)" class="btn btn-success" type="button">返回</button>
-                </div>
+
                 <div class="ibox-content">
                     <div class="tabs-container">
                         <ul class="nav nav-tabs">
@@ -53,17 +56,17 @@
                         <div class="tab-content">
                             <div id="tab-1" class="tab-pane active">
                                 <div class="wrapper-content">
-                                    <form method="post" class="form-horizontal">
+                                    <form  class="form-horizontal">
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label">名称：</label>
 
-                                            <div class="col-sm-2">
+                                            <div class="col-sm-4">
                                                 <input name="title" th:value="*{title}" type="text" class="form-control"/>
                                             </div>
                                         </div>
 
                                         <div class="form-group">
-                                            <label class="col-sm-1 control-label">封面图片</label>
+                                            <label class="col-sm-1 control-label">封面图片：</label>
 
                                             <div class="col-sm-10">
                                                 <div class="col-md-2">
@@ -84,23 +87,158 @@
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label">活动类型：</label>
 
-                                            <div class="col-sm-2">
-                                                <input name="title" th:value="*{title}" type="text" class="form-control"/>
+                                            <div class="col-sm-1">
+                                                <select class="form-control">
+                                                    <option>短途游</option>
+                                                    <option>长途游</option>
+                                                </select>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label">线路类型：</label>
 
-                                            <div class="col-sm-2">
-                                                <input name="title" th:value="*{title}" type="text" class="form-control"/>
+                                            <div class="col-sm-1">
+                                                <select class="form-control">
+                                                    <option>跳伞</option>
+                                                    <option>蹦极</option>
+                                                </select>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label">线路特色：</label>
 
-                                            <div class="col-sm-2">
-                                                <input name="title" th:value="*{title}" type="text" class="form-control"/>
+                                            <div class="col-sm-10">
+                                                <input placeholder="线路特色" name="title" th:value="*{title}"
+                                                       type="text" class="form-control"/>
                                             </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">目的地：</label>
+
+                                            <div class="col-sm-3">
+                                                <input placeholder="请选择目的地" data-toggle="city-picker"
+                                                       name="placeOfDeparture" th:value="*{placeOfDeparture}"
+                                                       type="text" class="form-control"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">出发地：</label>
+
+                                            <div class="col-sm-3">
+                                                <input placeholder="请选择出发地" data-toggle="city-picker"
+                                                       name="placeOfDeparture" th:value="*{placeOfDeparture}"
+                                                       type="text" class="form-control"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">途径地：</label>
+
+                                            <div class="col-sm-3">
+                                                <input placeholder="请选择途径地" data-toggle="city-picker"
+                                                       name="placeOfDeparture" th:value="*{placeOfDeparture}"
+                                                       type="text" class="form-control"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group form-inline">
+                                            <label class="col-sm-1 control-label">价格(￥)：</label>
+
+                                            <div class="col-sm-10">
+                                                <input name="price" th:value="*{price}" type="text"
+                                                       class="form-control"/>
+                                                <span class="text-left">成人</span>
+
+                                                <input name="childrenDiscount" th:value="*{childrenDiscount}" type="text"
+                                                       class="form-control"/>
+
+                                                <span class="text-left">儿童</span>
+                                                <button id="discountInfo" class="btn btn-white btn-circle btn-sm"
+                                                        type="button">
+                                                    <i class="fa fa-question"></i>
+                                                </button>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group form-inline">
+                                            <label class="col-sm-1 control-label">返利(￥)：</label>
+
+                                            <div class="col-sm-10">
+                                                <input name="rebate" th:value="*{rebate}" type="text"
+                                                       class="form-control"/>
+                                                <span>%</span>
+                                                <button id="rebateInfo" class="btn btn-white btn-circle btn-sm"
+                                                        type="button">
+                                                    <i class="fa fa-question"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">地接人：</label>
+
+                                            <div class="col-sm-2">
+                                                <input name="travelledAddress" th:value="*{travelledAddress}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">联系电话：</label>
+
+                                            <div class="col-sm-2">
+                                                <input name="travelledAddress" th:value="*{travelledAddress}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">人数：</label>
+
+                                            <div class="col-sm-1">
+                                                <input name="travelledAddress" th:value="*{travelledAddress}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">出行时间：</label>
+
+                                            <div class="col-sm-2">
+                                                <button class="btn btn-success">新增</button>
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+
+                                        <div class="form-group">
+
+                                            <div class="col-sm-2">
+                                                <input name="toursitDate" th:value="*{}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                            <div class="col-sm-2">
+                                                <input name="toursitDate" th:value="*{}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                            <div class="col-sm-2">
+                                                <input name="toursitDate" th:value="*{}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                            <div class="col-sm-2">
+                                                <input name="toursitDate" th:value="*{}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                            <div class="col-sm-2">
+                                                <input name="toursitDate" th:value="*{}" type="text"
+                                                       class="form-control"/>
+                                            </div>
+                                            <div class="col-sm-2">
+                                                <input name="toursitDate" th:value="*{}" type="text"
+                                                   class="form-control"/>
+                                            </div>
+
+
                                         </div>
 
                                     </form>
@@ -110,7 +248,25 @@
                                 <div class="wrapper-content">
                                     <form method="post" class="form-horizontal">
                                         <div class="form-group">
-                                            <label class="col-sm-1 control-label">资讯标题</label>
+                                            <label class="col-sm-1 control-label">活动详情</label>
+
+                                            <div class="col-sm-10">
+                                                <div class="summernote">
+                                                    <h2>H+ 后台主题</h2>
+                                                    <p>H+是一个完全响应式，基于Bootstrap3.3.5最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术，她提供了诸多的强大的可以重新组合的UI组件，并集成了最新的jQuery版本(v2.1.1)，当然，也集成了很多功能强大，用途广泛的就jQuery插件，她可以用于所有的Web应用程序，如<b>网站管理后台</b>，<b>网站会员中心</b>，<b>CMS</b>，<b>CRM</b>，<b>OA</b>等等，当然，您也可以对她进行深度定制，以做出更强系统。</p>
+                                                    <p>
+                                                        <b>当前版本：</b>v4.0.0
+                                                    </p>
+                                                    <p>
+                                                        <b>定价：</b><span class="label label-warning">&yen;988（不开发票）</span>
+                                                    </p>
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label">注意事项</label>
 
                                             <div class="col-sm-10">
                                                 <div class="summernote">
@@ -135,8 +291,9 @@
                     <div class="hr-line-dashed"></div>
                     <div class="form-group">
                         <p class="text-center">
-                            <button class="btn btn-success" type="button">取消</button>
-                            <button class="btn btn-success" type="button">取消</button>
+                            <button class="btn btn-success" type="button">保存</button>
+                            <button class="btn btn-success" type="button">保存并提交审核</button>
+                            <button class="btn btn-success" type="button">回收</button>
                         </p>
 
                     </div>
@@ -153,98 +310,17 @@
 <script src="http://resali.huobanplus.com/cdn/layer/2.4/layer.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/summernote/summernote.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/summernote/summernote-zh-CN.js"></script>
+<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/moment.js"></script>
+<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
+<script src="../../assets/libs/cityPicker/js/city-picker.data.js"></script>
+<script src="../../assets/libs/cityPicker/js/city-picker.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/ajaxfileupload/ajaxfileupload.js"></script>
+<script src="../../assets/js/page/supplier/goodsDetails.js" th:inline="javascript"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
     //        messageConfig.sharePicPath=/*[[${sharePicPath}]]*/ '';
     //图片上传
 
-    $(document).ready(function() {
-        $(".summernote").summernote({
-            lang: "zh-CN",
-            onImageUpload: function(files, editor, welEditable) {
-                sendFile(files[0],editor,welEditable);
-            }
-        })
-    });
-
-    function sendFile(file,editor,welEditable) {
-        data = new FormData();
-        data.append("fileImage", file);
-        $.ajax({
-            data: data,
-            type: "POST",
-            url: "/resource/uploadMessageImage",
-            cache: false,
-            contentType: false,
-            processData: false,
-            success: function(data) {
-                editor.insertImage(welEditable, data.url);
-            }
-        });
-    }
-
-
-    messageConfig.uploadImage=function(){
-        var loadPic=layer.load(0, {shade: false});
-        $.ajaxFileUpload({
-            url: '/resource/uploadMessageImage',
-            secureuri: false,
-            fileElementId: 'fileImage',
-            dataType: 'json',
-            data: null,
-            success: function(resultModel) {
-                if(resultModel.code==1){
-                    layer.close(loadPic);
-                    layer.msg("上传成功");
-                    $(".image-crop img").attr("src",resultModel.url);
-                }
-            },
-            error: function(data, status, e) {
-                layer.close(loadPic);
-                layer.msg("上传失败，请检查网络后重试"+e);
-            }
-        });
-    };
-
-    //提交资讯
-    messageConfig.submitForm=function(obj) {
-        if($(obj).attr("class")=="btn btn-primary disabled"){
-            return;
-        }
-        var messageModel={};
-        messageModel.id=$("input[name='messageId']").val();
-        messageModel.title=$("input[name='title']").val();
-        messageModel.customerId=/*[[${message.customerId}]]*/ '';
-        messageModel.putAway=$("input[name='putAway']:checked").val();
-        messageModel.pictureUrl=$("#pictureUrl").attr("src");
-        messageModel.summary=$("input[name='summary']").val();
-        messageModel.content=$(".summernote").code();
-        messageModel.date=new Date();
-
-
-        var ld=layer.load(5, {shade: false});
-        $(obj).attr("class","btn btn-primary disabled");
-
-        $.ajax({
-            type:'POST',
-            url: '/back/saveMessage',
-            dataType: 'json',
-            contentType:"application/json",
-            data: JSON.stringify(messageModel),
-            success:function(result){
-                layer.close(ld);
-                layer.msg("保存成功！");
-//                    $(obj).attr("class","btn btn-primary");
-                window.setTimeout("window.location='/back/showMessageList'",1000);
-            },
-            error:function(e){
-                layer.close(ld);
-                layer.msg("保存失败！");
-                $(obj).attr("class","btn btn-primary");
-            }
-        });
-    };
 
     /*]]>*/
 
