登录不打开新窗口

--- a/tourist-web/src/main/webapp/view/login.html
+++ b/tourist-web/src/main/webapp/view/login.html
@@ -41,17 +41,17 @@
             -moz-opacity: 0.5;
             opacity: 0.5;
             color: #FFFFFF;
-            height: 50px;
-            line-height: 50px;
-            float: left;
+            height: 60px;
+            line-height: 60px;
+            float: right;
             padding: 0 10px;
-            margin: 5px 0 0 5px;
+            margin: 10px 10px 0 0;
         }
     </style>
 </head>
 
 <body class="gray-bg">
-<div style="width: 200px;">
+<div style="width: 200px; float: right">
     <div id="loginError" class="msgDiv"
          style="background-color:indianred ;">
         用户名或者密码错误
