商品详情页面,日期修改2

--- a/tourist-web/src/main/webapp/view/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/supplier/goodsDetailsH+.html
@@ -206,36 +206,19 @@
                                             <label class="col-sm-1 control-label">出行时间：</label>
 
                                             <div class="col-sm-2">
-                                                <button class="btn btn-success">新增</button>
+                                                <button type="button"  onclick="addTouristDate()"
+                                                         class="btn btn-success">新增
+                                                </button>
                                             </div>
                                         </div>
                                         <div class="hr-line-dashed"></div>
 
-                                        <div class="form-group">
+                                        <div id="goodsTouristDates" class="form-group">
 
                                             <div class="col-sm-2">
+                                                <span style="display: none">1</span>
                                                 <input name="toursitDate" th:value="*{}" type="text"
                                                        class="form-control"/>
-                                            </div>
-                                            <div class="col-sm-2">
-                                                <input name="toursitDate" th:value="*{}" type="text"
-                                                       class="form-control"/>
-                                            </div>
-                                            <div class="col-sm-2">
-                                                <input name="toursitDate" th:value="*{}" type="text"
-                                                       class="form-control"/>
-                                            </div>
-                                            <div class="col-sm-2">
-                                                <input name="toursitDate" th:value="*{}" type="text"
-                                                       class="form-control"/>
-                                            </div>
-                                            <div class="col-sm-2">
-                                                <input name="toursitDate" th:value="*{}" type="text"
-                                                       class="form-control"/>
-                                            </div>
-                                            <div class="col-sm-2">
-                                                <input name="toursitDate" th:value="*{}" type="text"
-                                                   class="form-control"/>
                                             </div>
 
 
