--- a/tourist-web/src/main/webapp/view/login.html
+++ b/tourist-web/src/main/webapp/view/login.html
@@ -30,10 +30,11 @@
     <!--[if lt IE 8]>
     <meta http-equiv="refresh" content="0;ie.html"/>
     <![endif]-->
-    <script>if (window.top !== window.self) {
-        window.top.location = window.location;
-    }</script>
-
+    <script>
+        if (window.top !== window.self) {
+            window.top.location = window.location;
+        }
+    </script>
     <style>
         .msgDiv {
             display: none;
