js添加wap文件夹

--- a/tourist-web/src/main/webapp/view/manage/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/main.html
@@ -39,7 +39,8 @@
                         商户编号：100889887
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                 <span class="clear">
-                                    <span class="block m-t-xs"><strong class="font-bold" th:text="${#authentication.name}">超级管理员</strong><b
+                                    <span class="block m-t-xs"><strong class="font-bold"
+                                                                       th:text="${#authentication.name}">超级管理员</strong><b
                                             class="caret"></b></span>
                                 </span>
                         </a>
@@ -168,7 +169,7 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/2.4/layer.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/hplus.min.js"></script>
-<script type="text/javascript" src="http://resali.huobanplus.com/cdn/hotui/js/contabs.min.js"></script>
+<script src="http://resali.huobanplus.com/cdn/hotui/js/contabs.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/pace/pace.min.js"></script>
 
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/hot/bootstrap.hot.extra-utils-1.0.1.js"></script>
