--- a/tourist-web/src/main/webapp/view/manage/platform/main.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/main.html
@@ -236,10 +236,10 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/2.4/layer.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/hplus.min.js"></script>
-<script type="text/javascript" src="http://resali.huobanplus.com/cdn/hotui/js/contabs.min.js"></script>
+<script src="http://resali.huobanplus.com/cdn/hotui/js/contabs.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/pace/pace.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/hot/bootstrap.hot.extra-utils-1.0.1.js"></script>
-<script src="../../../assets/js/page/main.js"></script>
+<script src="../../../assets/js/manage/main.js"></script>
 
 <script type="text/javascript">
     function newTab(url, name) {
