--- a/tourist-web/src/main/webapp/view/manage/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/main.html
@@ -172,7 +172,7 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/contabs.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/pace/pace.min.js"></script>
 
-<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/hot/bootstrap.hot.extra-utils-1.0.1.js"></script>
+<!--<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/hot/bootstrap.hot.extra-utils-1.0.1.js"></script>-->
 
 <script type="text/javascript">
     function newTab(url, name) {
