分页相关修改

--- a/tourist-web/src/main/webapp/view/manage/platform/banner/bannerList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/banner/bannerList.html
@@ -27,7 +27,7 @@
                data-pagination="true" data-striped="true"
                data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-               data-query-params="getParams"
+               data-query-params="getParams" data-query-params-type="data"
                data-toolbar="#toolbar">
             <thead>
             <tr>
