--- a/tourist-web/src/main/webapp/view/manage/platform/purchaserPaymentRecord/purchaserPaymentRecordList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/purchaserPaymentRecord/purchaserPaymentRecordList.html
@@ -60,7 +60,7 @@
                data-show-export="true"
                data-click-to-select="true"
                data-toolbar="#toolbar"
-               data-query-params="getParams">
+               data-query-params="getParams" data-query-params-type="data">
             <thead>
             <tr>
                 <th data-field="state" data-checkbox="true"></th>
