--- a/tourist-web/src/main/webapp/view/manage/platform/settlementSheet/settlementSheetList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/settlementSheet/settlementSheetList.html
@@ -55,7 +55,7 @@
                        data-pagination="true" data-striped="true"
                        data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                        data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-                       data-query-params="getParams">
+                       data-query-params="getParams" data-query-params-type="data">
                     <thead>
                     <tr>
                         <th data-field="id" data-align="center" data-sortable="true">结算单号</th>
@@ -76,7 +76,7 @@
                        data-pagination="true" data-striped="true"
                        data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                        data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-                       data-query-params="getTxParams">
+                       data-query-params="getTxParams" data-query-params-type="data">
                     <thead>
                     <tr>
                         <th data-field="id" data-align="center" data-sortable="true">提现编号</th>
