--- a/tourist-web/src/main/webapp/view/manage/platform/supplier/supplierList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/supplier/supplierList.html
@@ -42,13 +42,13 @@
                data-method="get"
                data-side-pagination="server"
                data-pagination="true" data-striped="true"
-               data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
+               data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-               data-query-params="getParams" data-toolbar="#toolbar">
+               data-query-params="getParams" data-query-params-type="data" data-toolbar="#toolbar">
             <thead>
             <tr>
                 <th data-field="supplierName" data-align="center" data-sortable="true">名称</th>
-                <th data-field="adminAccount" data-align="center" data-sortable="true">登陆名</th>
+                <th data-field="loginName" data-align="center" data-sortable="true">登陆名</th>
                 <th data-field="address" data-align="center" data-sortable="true">所在地</th>
                 <th data-field="contacts" data-align="center" data-sortable="true">联系人</th>
                 <th data-field="contactNumber" data-align="center" data-sortable="true">电话</th>
