--- a/tourist-web/src/main/webapp/view/manage/platform/purchaserProductSetting/purchaserProductSettingList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/purchaserProductSetting/purchaserProductSettingList.html
@@ -46,7 +46,8 @@
                data-pagination="true" data-striped="true"
                data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-               data-query-params="getParams" data-toolbar="#toolbar" data-query-pa>
+               data-query-params="getParams" data-query-params-type="data"
+               data-toolbar="#toolbar">
             <thead>
             <tr>
                 <th data-field="id" data-align="center" data-sortable="true">id</th>
