--- a/tourist-web/src/main/webapp/view/manage/platform/touristType/touristTypeList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristType/touristTypeList.html
@@ -26,7 +26,7 @@
                data-pagination="true" data-striped="true"
                data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
                data-show-columns="true" data-minimum-count-columns="2" data-escape="true"
-               data-toolbar="#toolbar">
+               data-toolbar="#toolbar" data-query-params="getParams" data-query-params-type="data">
             <thead>
             <tr>
                 <th data-field="id" data-align="center" data-sortable="true">序号</th>
